@@ -1,0 +1,18 @@
+#!/bin/csh
+
+#
+# TR 8002 defaults
+#
+#
+
+. Configuration
+
+# data, log and report directories
+FILEDIR=/mgi/all/wts_projects/8000/8002
+DATADIR=${FILEDIR}/data
+LOGDIR=${FILEDIR}/logs
+IMAGESDIR=${FILEDIR}/images
+PIXFILE=${DATADIR}/pix8002.txt
+
+export FILEDIR DATADIR LOGDIR IMAGESDIR PIXFILE
+
