@@ -1,3 +1,8 @@
+TAG: gxdimageload-3-5-1-7
+DATE: 11/01/2006
+STAFF: lec
+CHANGES: TR 8002; GXD Thumbnail Images
+
 TAG: gxdimageload-3-5-1-6
 DATE: 10/27/2006
 STAFF: lec
